fix var